Run and deploy experiments using data from database
